edited formatting for all pages

--- a/views/userhome.handlebars
+++ b/views/userhome.handlebars
@@ -3,112 +3,123 @@
     <nav class="black lighten-2">
         <div class="container">
             <div class="nav-wrapper">
-                 {{!-- This is test Search  --}}
+                {{!-- This is test Search  --}}
                 <ul id="slide-out" class="sidenav">
                     <li class="no-padding">
                         <ul class="collapsible">
                             <li>
-                                <a class="collapsible-header yellow darken-2">SEARCH BY CATEGORY<i class="material-icons">arrow_drop_down</i></a>
+                                <a class="collapsible-header yellow darken-2">SEARCH BY CATEGORY<i
+                                        class="material-icons">arrow_drop_down</i></a>
                                 <div class="collapsible-body">
                                     <ul>
                                         <li>
-                                        <ul class="collapsible">
-                                            <li>
-                                                <a class="collapsible-header">Gender Neutral<i class="material-icons right">arrow_drop_down</i></a>
-                                                <div class="collapsible-body">
-                                                    <ul class="collapsible">
-                                                        <li>
-                                                        <a href="#!" id="gnShirt">&emsp;Shirts</a>
-                                                        </li>
-                                                        <li>
-                                                        <a href="#!" id="gnPants">&emsp;Pants</a>
-                                                        </li>
-                                                        <li>
-                                                        <a href="#!" id="gnDress">&emsp;Dress</a>
-                                                        </li>
-                                                        <li>
-                                                        <a href="#!" id="gnShoes">&emsp;Shoes</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </li>
-                                            <li id="mens-dd">
-                                                <a class="collapsible-header">Men<i class="material-icons right">arrow_drop_down</i></a>
-                                                <div class="collapsible-body">
-                                                    <ul class="collapsible">
-                                                        <li>
-                                                        <a href="#!" class="menShirtsAnchor" id="menShirts">&emsp;Shirts</a>
-                                                        </li>
-                                                        <li>
-                                                        <a href="#!" class="menPantsAnchor" id="menPants">&emsp;Pants</a>
-                                                        </li>
-                                                        <li>
-                                                        <a href="#!" class="menShoesAnchor" id="menShoes">&emsp;Shoes</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <a class="collapsible-header">Women<i class="material-icons right">arrow_drop_down</i></a>
-                                                <div class="collapsible-body">
-                                                    <ul class="collapsible">
-                                                        <li>
-                                                        <a href="#!" class="womenShirtsAnchor" id="womenShirt">&emsp;Shirts</a>
-                                                        </li>
-                                                        <li>
-                                                        <a href="#!" class="womenPantsAnchor" id="womenPants">&emsp;Pants</a>
-                                                        </li>
-                                                        <li>
-                                                        <a href="#!" class="womenDressAnchor" id="womenDress">&emsp;Dress</a>
-                                                        </li>
-                                                        <li>
-                                                        <a href="#!" class="womenShoesAnchor" id="womenShoes">&emsp;Shoes</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </li>
-                                    </ul>
+                                            <ul class="collapsible">
+                                                <li>
+                                                    <a class="collapsible-header">Gender Neutral<i
+                                                            class="material-icons right">arrow_drop_down</i></a>
+                                                    <div class="collapsible-body">
+                                                        <ul class="collapsible">
+                                                            <li>
+                                                                <a href="#!" id="gnShirt">&emsp;Shirts</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="#!" id="gnPants">&emsp;Pants</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="#!" id="gnDress">&emsp;Dress</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="#!" id="gnShoes">&emsp;Shoes</a>
+                                                            </li>
+                                                        </ul>
+                                                    </div>
+                                                </li>
+                                                <li id="mens-dd">
+                                                    <a class="collapsible-header">Men<i
+                                                            class="material-icons right">arrow_drop_down</i></a>
+                                                    <div class="collapsible-body">
+                                                        <ul class="collapsible">
+                                                            <li>
+                                                                <a href="#!" class="menShirtsAnchor"
+                                                                    id="menShirts">&emsp;Shirts</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="#!" class="menPantsAnchor"
+                                                                    id="menPants">&emsp;Pants</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="#!" class="menShoesAnchor"
+                                                                    id="menShoes">&emsp;Shoes</a>
+                                                            </li>
+                                                        </ul>
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <a class="collapsible-header">Women<i
+                                                            class="material-icons right">arrow_drop_down</i></a>
+                                                    <div class="collapsible-body">
+                                                        <ul class="collapsible">
+                                                            <li>
+                                                                <a href="#!" class="womenShirtsAnchor"
+                                                                    id="womenShirt">&emsp;Shirts</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="#!" class="womenPantsAnchor"
+                                                                    id="womenPants">&emsp;Pants</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="#!" class="womenDressAnchor"
+                                                                    id="womenDress">&emsp;Dress</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="#!" class="womenShoesAnchor"
+                                                                    id="womenShoes">&emsp;Shoes</a>
+                                                            </li>
+                                                        </ul>
+                                                    </div>
+                                                </li>
+                                            </ul>
                                 </div>
                             </li>
                         </ul>
                     </li>
                 </ul>
                 <ul class="right hide-on-med-and-down">
-                <li>
-                    <a class="sidenav-trigger show-on-large" href="#!" data-target="slide-out">
-                    <i class="material-icons right">menu</i>
-                    </a>
-                </li>
-                <ul id="dropdown1" class="dropdown-content">
                     <li>
-                    <a href="#!">Shirt</a>
+                        <a class="sidenav-trigger show-on-large" href="#!" data-target="slide-out">
+                            <i class="material-icons right">menu</i>
+                        </a>
                     </li>
-                    <li>
-                    <a href="#!">Pants</a>
-                    </li>
-                    <li>
-                    <a href="#!">Dress</a>
-                    </li>
-                    <li>
-                    <a href="#!">Shoes</a>
-                    </li>
-                </ul>
+                    <ul id="dropdown1" class="dropdown-content">
+                        <li>
+                            <a href="#!">Shirt</a>
+                        </li>
+                        <li>
+                            <a href="#!">Pants</a>
+                        </li>
+                        <li>
+                            <a href="#!">Dress</a>
+                        </li>
+                        <li>
+                            <a href="#!">Shoes</a>
+                        </li>
+                    </ul>
                 </ul>
                 <a href="#" data-target="slide-out" class="sidenav-trigger">
-                <i class="material-icons">menu</i>
+                    <i class="material-icons">menu</i>
                 </a>
-                 {{!-- End of test Search  --}}
+                {{!-- End of test Search  --}}
                 <a href="./" class="show-on-small hide-on-large-only"></i>Home</a>
                 <a href="./" class="brand-logo hide-on-small-only"><i class="fas fa-tshirt"></i>My Closet</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="/">Home</a></li>
                     <li><a href="#">Services</a></li>
                     <!-- Modal Trigger-->
-                    <a class="waves-effect waves-light btn yellow darken-2 modal-trigger" href="#modal1">Log Out</a>                        
+                    <a class="waves-effect waves-light btn yellow darken-2 modal-trigger" href="#modal1">Log Out</a>
                 </ul>
             </div>
         </div>
-    </nav> 
+    </nav>
     <!-- Log in Modal Structure -->
     <div id="modal1" class="modal">
         <div class="modal-content">
@@ -122,21 +133,20 @@
                     <input placeholder="Placeholder" id="password" type="text" class="validate">
                     <label for="password">PASSWORD</label>
                 </div>
-            </div>    
+            </div>
         </div>
         <div class="modal-footer">
             <button class=" modal-close btn waves-effect waves-yellow darken-2 btn-flat" type="submit" name="action">
-                    <a href="#" class="modal-close waves-effect waves-yellow darken-2 btn-flat">Log out</a>  
+                <a href="#" class="modal-close waves-effect waves-yellow darken-2 btn-flat">Log out</a>
             </button>
         </div>
-    </div>                  
+    </div>
 </header>
 <main>
     <div class="container">
         <div class="row">
             <div class="col s12">
                 <h5>Search Result</h5>
-                
 
 
 
@@ -145,61 +155,68 @@
 
 
 
-    <div id="modal2" class="modal">
-        <div class="modal-content">
-            <h4>Stuff</h4>
-            <div class="row">
-                <div class="input-field col s6">
-                    <input class="change-input" placeholder="$5.00" id="change-price" type="text" class="validate">
-                    <label for="change-price" id="change-price-label">Price</label>
+
+                <div id="modal2" class="modal">
+                    <div class="modal-content">
+                        <h4>Stuff</h4>
+                        <div class="row">
+                            <div class="input-field col s6">
+                                <input class="change-input" placeholder="$5.00" id="change-price" type="text"
+                                    class="validate">
+                                <label for="change-price" id="change-price-label">Price</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button id="update-submit" class="modal-close btn waves-effect waves-yellow darken-2 btn-flat"
+                            type="submit" name="action">
+                            <a href="#" class="modal-close waves-effect waves-yellow darken-2 btn-flat">Update Item</a>
+                        </button>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <button id="update-submit" class="modal-close btn waves-effect waves-yellow darken-2 btn-flat" type="submit" name="action">
-                <a href="#" class="modal-close waves-effect waves-yellow darken-2 btn-flat">Update Item</a>
-            </button>
-        </div>
-    </div>
 
                 <hr>
                 <div class="results-container">
-                <div id="search-result"></div>
-                <div class="result-div" id="pants-result"></div>
-                <div class="result-div" id="dresses-result"></div>
-                <div class="result-div" id="shoes-result"></div>
+                    <div id="search-result"></div>
+                    <div class="result-div" id="pants-result"></div>
+                    <div class="result-div" id="dresses-result"></div>
+                    <div class="result-div" id="shoes-result"></div>
                 </div>
             </div>
-        </div> 
+        </div>
         <div class="row">
             <div class="col s12">
                 <h5>My Closet</h5>
                 <hr>
                 <div id="closet"></div>
             </div>
-        </div> 
-    </div>   
+        </div>
+    </div>
 </main>
 <!-- Footer -->
 <footer class="page-footer black lighten-2">
-  <div class="container">
-    <div class="row">
-      <div class="col l6 s12"></div>
-      <div class="col l4 offset-l2 s12"> 
-          <ul>
-            <li><a class="grey-text text-lighten-3" href="https://github.com/tjlyttles" target="__blank"><i class="fab fa-github"></i><span class="git-text">TJ L</span></a></li>
-            <li><a class="grey-text text-lighten-3" href="https://github.com/abryant858" target="__blank"><i class="fab fa-github"></i><span class="git-text">Armand B</span></a></li>
-            <li><a class="grey-text text-lighten-3" href="https://github.com/davygallegos" target="__blank"><i class="fab fa-github"></i><span class="git-text">David G</span></a></li>
-            <li><a class="grey-text text-lighten-3" href="https://github.com/Avalineai" target="__blank"><i class="fab fa-github"></i><span class="git-text">Avaline A</span></a></li>
-          </ul>
-      </div>
+    <div class="container">
+        <div class="row">
+            <div class="col l6 s12"></div>
+            <div class="col l4 offset-l2 s12">
+                <ul>
+                    <li><a class="grey-text text-lighten-3" href="https://github.com/tjlyttles" target="__blank"><i
+                                class="fab fa-github"></i><span class="git-text">TJ L</span></a></li>
+                    <li><a class="grey-text text-lighten-3" href="https://github.com/abryant858" target="__blank"><i
+                                class="fab fa-github"></i><span class="git-text">Armand B</span></a></li>
+                    <li><a class="grey-text text-lighten-3" href="https://github.com/davygallegos" target="__blank"><i
+                                class="fab fa-github"></i><span class="git-text">David G</span></a></li>
+                    <li><a class="grey-text text-lighten-3" href="https://github.com/Avalineai" target="__blank"><i
+                                class="fab fa-github"></i><span class="git-text">Avaline A</span></a></li>
+                </ul>
+            </div>
+        </div>
     </div>
-  </div>
-  <div class="footer-copyright black">
-    <div class="container foot-bottom black center-align">
-      © 2019 Copyright My Closet - All Rights Reserved
+    <div class="footer-copyright black">
+        <div class="container foot-bottom black center-align">
+            © 2019 Copyright My Closet - All Rights Reserved
+        </div>
     </div>
-  </div>
 </footer>
 <!-- Library Links -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
