sync image uploads

--- a/views/additems.handlebars
+++ b/views/additems.handlebars
@@ -115,10 +115,10 @@
                       <div class="file-field input-field">
                         <div class="waves-effect waves-light btn yellow darken-2">
                           <span>Photo</span>
-                          <input type="file" name="file">
+                          <input id="shirt-img-url" type="file" name="file">
                         </div>
                         <div class="file-path-wrapper">
-                          <input id="img-url" class="file-path validate" type="text" placeholder="Upload a photo of your item">
+                          <input  class="file-path validate" type="text" placeholder="Upload a photo of your item">
                         </div>
                       </div>
                     </form>
