updated all files to include image upload functionality

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -60,7 +60,7 @@
     <!--<div class="parallax">
       <img src="/assets/images/closet.jpeg" alt="closet" class="responsive-img">
     </div> -->
-    {{!-- <div class="carousel-items">
+    <div class="carousel-items">
       <a class="carousel-item">
         <img src="/assets/images/closet2.jpg">
       </a>
