got edit to function

--- a/views/userhome.handlebars
+++ b/views/userhome.handlebars
@@ -165,12 +165,17 @@
                                     class="validate">
                                 <label for="change-price" id="change-price-label">Price</label>
                             </div>
+                            <div class="input-field col s6">
+                                <input class="change-input" placeholder="$5.00" id="change-price" type="text"
+                                    class="validate">
+                                <label for="change-price" id="change-price-label">Condition</label>
+                            </div>
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button id="update-submit" class="modal-close btn waves-effect waves-yellow darken-2 btn-flat"
+                        <button  class="modal-close btn waves-effect waves-yellow darken-2 btn-flat"
                             type="submit" name="action">
-                            <a href="#" class="modal-close waves-effect waves-yellow darken-2 btn-flat">Update Item</a>
+                            <a href="#" id="update-submit" class="modal-close waves-effect waves-yellow darken-2 btn-flat">Update Item</a>
                         </button>
                     </div>
                 </div>
