--- a/views/additems.handlebars
+++ b/views/additems.handlebars
@@ -182,7 +182,7 @@
                               <input type="file" name="file">
                             </div>
                             <div class="file-path-wrapper">
-                              <input id="pants-img-url" class="file-path validate" type="text"
+                              <input id="img-url" class="file-path validate" type="text"
                                 placeholder="Upload a photo of your item">
                             </div>
                           </div>
@@ -244,7 +244,7 @@
                         <label for="dress-price" id="dress-price-label">Price</label>
                       </div>
                       <div class="input-field col s12">
-                        <form id="img-url" enctype="multipart/form-data" action="/api/upload" method="POST">
+                        <form class="img-url" enctype="multipart/form-data" action="/api/upload" method="POST">
                           <div class="file-field input-field">
                             <div class="waves-effect waves-light btn yellow darken-2">
                               <span>Photo</span>
@@ -319,7 +319,7 @@
                         <label for="shoes-price" id="shoes-price-label">Price</label>
                       </div>
                       <div class="input-field col s12">
-                        <form id="img-url" enctype="multipart/form-data" action="/api/upload" method="POST">
+                        <form class="img-url" enctype="multipart/form-data" action="/api/upload" method="POST">
                           <div class="file-field input-field">
                             <div class="waves-effect waves-light btn yellow darken-2">
                               <span>Photo</span>
