--- a/views/additems.handlebars
+++ b/views/additems.handlebars
@@ -176,7 +176,7 @@
                         <label for="pants-price" id="pants-price-label">Price</label>
                       </div>
                       <div class="input-field col s12">
-                        <form id="img-url" enctype="multipart/form-data" action="/api/upload" method="POST">
+                        <form class="img-url" enctype="multipart/form-data" action="/api/upload" method="POST">
                           <div class="file-field input-field">
                             <div class="waves-effect waves-light btn yellow darken-2">
                               <span>Photo</span>
